--- a/stylesF.css
+++ b/stylesF.css
@@ -1,144 +1,143 @@
 #title {
-    }
-      .container-fluid {
-        padding: 3% 15%;
-      }  
-    h1 {
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-weight: bold;
-        font-size: 3rem;
-        line-height: 1.5;
-    }
-    
-    h2 {
-        color: #fff;
-        font-family:'Montserrat', sans-serif;
-        font-size: 1rem;
-    }
-    
-    h3 {
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-weight: bold;
-    }
-    
-    p {
-color: #2ecfe7; 
-    }
-    .navbar {
-        padding-bottom: 0 0 4.5rem;
-    }
-    .navbar-brand {
-        font-family: 'Ubuntu';
-        font-size: 2.5rem;
-        font-weight: bold;
-    }
-    
-    .navbar-item {
-        padding: 0 18px;
-    }
-    
-    .nav-link{
-        font-family: 'Montserrat', sans-serif;
-        font-size: 1.2rem;
-    }
-    
-    .download-button {
-        margin: 5% 3% 5% 0;
-    }
-    
-    .title-image {
-        width: 28%;
-        transform: rotate(20deg);
-        position: absolute;
-    }
-    
-    @media (max-width:1028px){
-        #title{
-            text-align: center;
-        }
-        .title-image{
-        position:static;
-        transform: rotate(0);
-        }
-    }
-    
-    #features{
-        padding: 7% 15%;
-        background-color: #fff;
-    }
-    
-    .feature-box {
-        text-align: center;
-        padding: 5%;
-    }
-    
-    .icon {
-        color: #ef8712;
-        margin-bottom: 1rem;
-    }
-    
-    .icon:hover{
-        color: #c51398;
-    }
-    
-    #testimonials {
-        
-        text-align: center;
-        background-color: #3fa507;
-    
-    }
-    
-    .carousel-item {
-        padding: 7% 15%;
-    }
-    .testimonial-image {
-        width: 50%;
-        border-radius: 50%;
-        margin: 20px;
-    }
-    .p{
-        color: #c51398;
-    }
-    
-    #press {
-        padding: 7% 15%;
-        text-align: center;
-        background-color: #00bcd4;
-    }
-    .press-logo {
-        width: 10%;
-        margin: 20px 20px 50px;
-    }
-    
-    
-    #pricing {
-        padding: 100px;
+}
+  .container-fluid {
+    padding: 3% 15%;
+  }  
+h1 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+h2 {
+    font-family:'Montserrat', sans-serif;
+    font-size: 1rem;
+}
+
+h3 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+}
+
+p {
+color: #00d5ff; 
+}
+.navbar {
+    padding-bottom: 0 0 4.5rem;
+}
+.navbar-brand {
+    font-family: 'Ubuntu';
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.navbar-item {
+    padding: 0 18px;
+}
+
+.nav-link{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.2rem;
+}
+
+.download-button {
+    margin: 5% 3% 5% 0;
+}
+
+.title-image {
+    width: 28%;
+    transform: rotate(20deg);
+    position: absolute;
+}
+
+@media (max-width:1028px){
+    #title{
         text-align: center;
     }
-    
-    .pricing-header {
-        color: #000;
+    .title-image{
+    position:static;
+    transform: rotate(0);
     }
-    
-    .pricing-column {
-        padding: 3% 2%;
-    }
-    
-    #cta {
-        background-color: #00bcd4;
-        color: #fff;
-        padding: 7% 15%;
+}
+
+#features{
+    padding: 7% 15%;
+    background-color: #fff;
+}
+
+.feature-box {
     text-align: center;
-    }
+    padding: 5%;
+}
+
+.icon {
+    color: #ef1212;
+    margin-bottom: 1rem;
+}
+
+.icon:hover{
+    color: #ff0000;
+}
+
+#testimonials {
     
-    .cta-heading{
-        font-family: 'Montserrat', sans-serif;
-        font-size: 3.5rem;
-        font-weight: bold;
-    }
-    
-    #footer {
-        padding: 7% 15%;
-        text-align: center;
-        background-color: #c51398;
-    }
+    text-align: center;
+    background-color: #b9a1e9;
+
+}
+
+.carousel-item {
+    padding: 7% 15%;
+}
+.testimonial-image {
+    width: 50%;
+    border-radius: 50%;
+    margin: 20px;
+}
+.p{
+    color: #c51398;
+}
+
+#press {
+    padding: 7% 15%;
+    text-align: center;
+    background-color: #00bcd4;
+}
+.press-logo {
+    width: 10%;
+    margin: 20px 20px 50px;
+}
+
+
+#pricing {
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-header {
+    color: #000;
+}
+
+.pricing-column {
+    padding: 3% 2%;
+}
+
+#cta {
+    background-color: #00bcd4;
+    color: #fff;
+    padding: 7% 15%;
+text-align: center;
+}
+
+.cta-heading{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3.5rem;
+    font-weight: bold;
+}
+
+#footer {
+    padding: 7% 15%;
+    text-align: center;
+    background-color: #ffffff;
+}
